# persigraph

./: .gitignore  LICENSE.txt  README.md  __init__.py  developer_notes.md  pyproject.toml  setup.py
DataAnalysis/: __init__.py  forecast_analysis.py  introducing_data.ipynb  preprocess.py  statistics.py  tmp.py
DataAnalysis/generate_plots/: __init__.py  all_members_first_location.py  distplots_all_locations.py  (+7 more)
Exploration/: brute_force_clustering.py
GraphApp/: manage.py
Interactive/: figures.js  index.html  index.js  interact.js  main.js  plots.js  preprocess.js  utils.js
PG_Naive/: __init__.py  analysis.py  edge.py  persistentgraph.py  plots.py
PersiGraph/: __init__.py
PersistentGraph/: PG.ipynb  __init__.py  _clustering_model.py  _pg_kmeans.py  _pg_naive.py  _scores.py  analysis.py  component.py  edge.py  persistentgraph.py  persistentgraphentropy.py  persitentgraph.py  plots.py  toy_examples.ipynb  vertex.py
PersistentGraph_KMeans/: __init__.py  analysis.py  edge.py  persistentgraph.py  plots.py  toy_examples.ipynb  vertex.py
Preprocessing/: extraction.py  statistics.py
Topology/: multimodalities02.ipynb
ToyExample/: generate_PG_on_best_examples.py  generate_data.py  generate_toy_examples.py  toy_examples.ipynb
Tutorials/: earths_atmosphere.ipynb  history_weather_forecast.ipynb  lorenz.ipynb  multimodalities.ipynb  multimodalities02.ipynb  rm.rst  weather_forecast.ipynb
Vis/: __init__.py  barstyle.py  commonstyle.py  componentstyle.py  edgestyle.py  mjostyle.py  pgraphstyle.py  uncertaintystyle.py  vertexstyle.py
persigraph/: __init__.py
utils/: _clustering.py  check_variable.py  d3.py  functions.py  kmeans.py  lists.py  naive.py  npy.py  plt.py  sorted_lists.py
(+122 files in other folders)
