[tool.poetry]
name = "persigraph"
version = "0.1.0"
description = "Python implementation of the PersistentGraph method"
authors = ["Natacha Galmiche <natacha.galmiche@uib.no>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
pycvi = {git = "https://github.com/nglm/pycvi.git"}
matplotlib = "^3.7.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
